<resources>
    <string name="app_name">Noemí Flamenca</string>
    <string name="menu_0">Inicio</string>
    <string name="menu_1">Vestidos</string>
    <string name="menu_2">Faldas</string>
    <string name="menu_3">Accesorios</string>
    <string name="menu_4">Contacto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="contacto_desc">Para contactar con nosotros, puedes enviarnos un correo electrónico o enviarnos un mensaje por nuestras redes sociales.</string>
    <string name="correo">minoemiflamenca@gmail.com</string>
    <string name="facebook">www.facebook.com/minoemiflamenca</string>
    <string name="youtube">www.youtube.com/channel/UCJtN1kSAs8c_NALtv968WoA</string>
    <string name="instagram">www.instagram.com/minoemiflamenca</string>
    <string name="galeria">Fotos de Eventos</string>
    <string name="galeria_anterior">&lt;</string>
    <string name="galeria_siguiente">&gt;</string>
    <string name="action_settings">Settings</string>
    <string name="id_productos">ID: </string>
    <string name="productos_color">Color:\u0020</string>
    <string name="precio_productos">Precio:\u0020</string>
    <string name="banner_ad_unit_id">ca-app-pub-6311459401782434/1432091661</string>
    <string name="modo_foto">Ampliar Imagen</string>
    <string name="volver_modo_foto">Volver</string>

</resources>
