<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gamusinostudios.noemiflamenca.Fragment01">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/contacto_desc" />

    <ImageButton
        android:id="@+id/imageButton1"
        style="@android:style/Widget.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton2"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_alignStart="@+id/imageButton2"
        android:contentDescription="@string/correo"
        android:src="@drawable/gmail" />

    <ImageButton
        android:id="@+id/imageButton2"
        style="@android:style/Widget.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/facebook"
        android:src="@drawable/facebook" />

    <ImageButton
        android:id="@+id/imageButton3"
        style="@android:style/Widget.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_alignStart="@+id/imageButton2"
        android:layout_below="@+id/imageButton2"
        android:contentDescription="@string/youtube"
        android:src="@drawable/youtube" />

    <ImageButton
        android:id="@+id/imageButton4"
        style="@android:style/Widget.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_alignStart="@+id/imageButton3"
        android:layout_below="@+id/imageButton3"
        android:contentDescription="@string/instagram"
        android:src="@drawable/instagram" />

</RelativeLayout>
