<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="50dp"
    android:orientation="vertical"
    tools:context="gamusinostudios.noemiflamenca.Fragment01">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/galeria"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <LinearLayout
        android:id="@+id/butons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">

        <Button
            android:id="@+id/botonAnterior"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/galeria_anterior"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/imageViewPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/botonSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/galeria_siguiente"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
