<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/faldas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="50dp"
    android:orientation="vertical">


    <Button
        android:id="@+id/modoFotoFaldas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modo_foto" />

    <LinearLayout
        android:id="@+id/infoF1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewColorFaldas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productos_color"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textViewColorFaldasResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPrecioFaldas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio_productos"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewPrecioFaldasResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/common_signin_btn_default_background"
            android:textSize="15sp"
            android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/infoF2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">
        <TextView
            android:id="@+id/textViewDescripcionFaldas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/butonsFaldilles"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">

        <Button
            android:id="@+id/botonAnteriorFaldas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/galeria_anterior"
            android:layout_weight="1"/>

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/imageViewFaldas"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/botonSiguienteFalda"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/galeria_siguiente"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
