<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accesorios"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="50dp"
    android:orientation="vertical">


    <Button
        android:id="@+id/modoFotoAccesorios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modo_foto" />

    <LinearLayout
        android:id="@+id/infoA1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewColorAccesorios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productos_color"
            android:textSize="18dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textViewColorAccesoriosResultado"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewPrecioAccesorios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio_productos"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewPrecioAccesoriosResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/common_signin_btn_default_background"
            android:textSize="15sp"
            android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/infoA2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <TextView
            android:id="@+id/textViewDescripcionAccesorios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/butonsAccesoris"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">

        <Button
            android:id="@+id/botonAnteriorAccesorios"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/galeria_anterior"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/imageViewAccesorios"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/botonSiguienteAccesorio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/galeria_siguiente"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
