<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vestidos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="50dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewVestidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/menu_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <LinearLayout
        android:id="@+id/infoV1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/textViewIdVestidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_productos"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewIdVestidosResultado"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewColorVestidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_productos"
            android:textSize="18dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textViewColorVestidosResultado"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/black" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/infoV2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <TextView
            android:id="@+id/textViewDescripcionVestidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/butonsVestits"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">

        <Button
            android:id="@+id/botonAnteriorVestidos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/galeria_anterior"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/imageViewVestidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/botonSiguienteVestidos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/galeria_siguiente"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
